--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.1"
+    "react-native": "0.71.1",
+    "react-native-haptic-feedback": "^2.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
